codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__approval_modal_exec.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  Would you like to run the following command?

  Reason: this is a test reason such as one that would be produced by the model

  $ echo hello world

› 1. Allow and proceed (y)
  2. Allow, and don't ask again for commands that start with `echo hello world` (p)
  3. Deny, and tell Codex what to do differently (esc)

  Press enter to confirm or esc to cancel
