codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__approval_modal_patch.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  Would you like to make the following edits?

  Reason: The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. Allow and proceed (y)
  2. Allow, and don't ask again for these files (a)
  3. Deny, and tell Codex what to do differently (esc)

  Press enter to confirm or esc to cancel
